<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="46dp">

    <TextView
        android:id="@+id/headText_RF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rg_rbn_RF"
        android:layout_alignParentTop="true"
        android:text="@string/Registry_form"
        android:textSize="@dimen/head_txt_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilay_in21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/et_Login_RF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/headLogin_AM"
            android:textSize="@dimen/txtSizeAll" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilay_in22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilay_in21">

        <EditText
            android:id="@+id/et_Password_RF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent"
            android:ems="10"
            android:hint="@string/headPass_AM"
            android:inputType="textPassword"
            android:textSize="@dimen/txtSizeAll" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilay_in23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilay_in22">

        <EditText
            android:id="@+id/et_firstName_RF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/headfirstName_RF"
            android:textSize="@dimen/txtSizeAll" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilay_in24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilay_in23">

        <EditText
            android:id="@+id/et_lastName_RF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent"
            android:hint="@string/headlastName_RF"
            android:textSize="@dimen/txtSizeAll" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_rbn_RF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilay_in24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/indent">

        <RadioButton
            android:id="@+id/radio_female_RF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/female" />

        <RadioButton
            android:id="@+id/radio_male_RF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/male" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_register_RF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rg_rbn_RF"
        android:clickable="true"
        android:text="@string/Register"
        android:textSize="@dimen/txtSizeAll" />

</RelativeLayout>




