<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asus.ninthapp.MainActivity">


    <RelativeLayout
        android:id="@+id/Layout_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/headText_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/head_txt_size"
            android:text="@string/headText_AM"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilay_in1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headText_AM">

            <EditText
                android:id="@+id/et_Login_AM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/headLogin_AM"
                android:textSize="@dimen/txtSizeAll"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilay_in2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilay_in1">

            <EditText
                android:id="@+id/et_Password_AM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent"
                android:hint="@string/headPass_AM"
                android:textSize="@dimen/txtSizeAll"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="@dimen/txtSizeAll"
            android:text="@string/Register"
            android:textColor="@color/colorTextLBlue"
            android:textStyle="italic"
            android:paddingBottom="@dimen/indent"
            android:layout_below="@+id/tilay_in2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btn_login_AM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textSize="@dimen/txtSizeAll"
            android:text="@string/Login"
            android:layout_below="@+id/tv_register_AM"
            android:layout_alignParentStart="true"
            android:onClick="shoeDialog" />

    </RelativeLayout>


</RelativeLayout>
